tests/NormalTests/paczka1/fuzzy1/59803829.err
Error in line 5: deF A742 96,0
Error in line 17: deF A472 160,6
